--- a/Identity/Identity.web/Views/Shared/_LayoutAdmin.cshtml
+++ b/Identity/Identity.web/Views/Shared/_LayoutAdmin.cshtml
@@ -7,29 +7,20 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <link href="~/lib/twitter-bootstrap/css/bootstrap.css" rel="stylesheet" />
 
-    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Bıdıbıdı.com</a>
+            <a class="navbar-brand"  asp-action="Index" >Bıdıbıdı.com</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
 
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" asp-action="Home">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-item nav-link" asp-action="SignUp">Üye Ol</a>
-                    </li>
-                    <li class="nav-item">
 
-                        <a class="nav-item nav-link" asp-action="LogIn">Giriş yap</a>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-action="Index" asp-controller="Admin">Admin Ana Sayfa</a>
                     </li>
                 </ul>
             </div>
@@ -37,7 +28,22 @@
     </nav>
 
     <div class="container" style="margin-top:10px;">
-        @RenderBody()
+        <div class="row">
+            <div class="col-md-8">
+                @RenderBody()
+            </div>
+            <div class="col-md-4">
+                <h3>Menü</h3>
+
+                <a class="btn btn-danger btn-block" asp-action="Claims" asp-controller="Admin">üye claims</a>
+
+                <a class="btn btn-danger btn-block" asp-action="Users" asp-controller="Admin">Üyeler</a>
+
+                <a class="btn btn-danger btn-block" asp-action="Roles" asp-controller="Admin">Roller</a>
+
+                <a class="btn btn-danger btn-block" asp-action="Logout" asp-controller="Member" asp-route-returnUrl="/Home/Index">Çıkış yap</a>
+            </div>
+        </div>
     </div>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
