--- a/Identity/Identity.web/Views/Home/LogIn.cshtml
+++ b/Identity/Identity.web/Views/Home/LogIn.cshtml
@@ -1,7 +1,35 @@
-﻿
+﻿@model Identity.web.ViewModels.LoginViewModel
+
 @{
     ViewData["Title"] = "LogIn";
 }
 
-<h1>Giriş Sayfası</h1>
+@*Login View Model kullanılarak otomatik oluşturuldu*@
 
+
+<div class="row">
+   
+    <div class="col-md-4 offset-md-4">
+        <h4>Giriş Sayfası</h4>
+        <hr />
+        <form asp-action="LogIn" method="post">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Email" class="control-label"></label>
+                <input asp-for="Email" class="form-control" />
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Password" class="control-label"></label>
+                <input asp-for="Password" class="form-control" />
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="checkbox" asp-for="RememberMe"/> Beni Hatırla
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Giriş Yap" class="btn btn-primary offset-4" />
+            </div>
+        </form>
+    </div>
+</div>
