--- a/Identity/Identity.web/Views/Home/SignUp.cshtml
+++ b/Identity/Identity.web/Views/Home/SignUp.cshtml
@@ -5,10 +5,12 @@
 }
 
 
-<h4>Kullanıcı Kayıt Formu</h4>
-<hr />
+
 <div class="row">
+    
     <div class="col-md-4 offset-md-4">
+        <h4>Kullanıcı Kayıt Formu</h4>
+        <hr />
         <form asp-action="SignUp" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -32,7 +34,7 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Üye Ol" class="btn btn-primary" />
+                <input type="submit" value="Üye Ol" class="btn btn-primary offset-4" />
             </div>
         </form>
     </div>
