--- a/Identity/Identity.web/Views/Home/LogIn.cshtml
+++ b/Identity/Identity.web/Views/Home/LogIn.cshtml
@@ -25,11 +25,12 @@
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="checkbox" asp-for="RememberMe"/> Beni Hatırla
+                <input type="checkbox" asp-for="RememberMe" /> Beni Hatırla
             </div>
             <div class="form-group">
                 <input type="submit" value="Giriş Yap" class="btn btn-primary offset-4" />
             </div>
         </form>
+        <a class="btn btn-link" asp-action="ResetPassword">Şifremi unuttum</a>
     </div>
 </div>
