--- a/Identity/Identity.web/Views/_ViewImports.cshtml
+++ b/Identity/Identity.web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Identity.web
 @using Identity.web.Models
+@using Identity.web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
