--- a/Identity/Identity.web/Views/Member/Index.cshtml
+++ b/Identity/Identity.web/Views/Member/Index.cshtml
@@ -7,7 +7,7 @@
 <h3 class="text-center">Kullanıcı Bilgileri</h3>
 <div class="row">
     <div class="col-sm-3">
-        @*<img style="width:100%; height:100%" src="@Model.Picture" />*@
+        <img style="width:100%; height:100%" src="@Model.Picture" />
     </div>
     <div class="col-sm-9">
 
@@ -25,7 +25,7 @@
                 <th>Telefon no</th>
                 <td>@Model.PhoneNumber</td>
             </tr>
-            @*<tr>
+            <tr>
                 <th>City</th>
                 <td>
                     @if (!String.IsNullOrEmpty(Model.City))
@@ -38,8 +38,8 @@
                         <span>belirtilmemiş</span>
                     }
                 </td>
-            </tr>*@
-            @*<tr>
+            </tr>
+            <tr>
                 <th>Doğum tarihi</th>
                 <td>
 
@@ -53,12 +53,12 @@
                         <span>belirtilmemiş</span>
                     }
                 </td>
-            </tr>*@
+            </tr>
 
-            @*<tr>
+            <tr>
                 <th>Cinsiyet</th>
                 <td>@Model.Gender</td>
-            </tr>*@
+            </tr>
         </table>
     </div>
 </div>
