Rol yönetimi bitti

--- a/Identity/Identity.web/Views/Admin/Index.cshtml
+++ b/Identity/Identity.web/Views/Admin/Index.cshtml
@@ -1,11 +1,13 @@
-﻿@model IQueryable<AppUser>
+﻿
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<table class="table">
+<h2>Hoş Geldiniz</h2>
+
+@*<table class="table">
     
     <thead>
         <tr>
@@ -33,5 +35,5 @@
         }
     </tbody>
 
-</table>
+</table>*@
 
