--- a/Identity/Identity.web/Views/Shared/_LayoutMember.cshtml
+++ b/Identity/Identity.web/Views/Shared/_LayoutMember.cshtml
@@ -25,9 +25,13 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-action="Index" asp-controller="Member">Üye Ana Sayfa</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="btn btn-info" asp-action="Index" asp-controller="Admin">Admin ana sayfa</a>
-                    </li>
+                    @if (User.IsInRole("admin"))
+                    {
+                        <li class="nav-item">
+                            <a class="btn btn-info" asp-action="Index" asp-controller="Admin">Admin ana sayfa</a>
+                        </li>
+                    }
+
 
                     <li class="nav-item">
                         <a class="btn btn-info" asp-action="Editor" asp-controller="Member">Editor ana sayfa</a>
